image_pull_mult/image_pull_mult_constraint1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredRegistryMultiple
metadata:
  name: imagesmustcomefromnondocker
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    registry: "docker.io/"
